--- a/templates/login.html
+++ b/templates/login.html
@@ -10,7 +10,7 @@
 
     <title>PyNote</title>
     
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}"/>
+    <link rel="stylesheet" href="{{ url_for('static', filename='form.css') }}"/>
     <script src= "{{ url_for('static', filename='../custom-scripts.js') }}" defer></script>
   </head>
   <body>
